--- a/style.css
+++ b/style.css
@@ -16,32 +16,28 @@ html {
 
 body {
 	text-align: center;
+	background-color: hsl(0, 0%, 97%);
+	color: #222222;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #puzzle {
 	width: 500px;
 	height: 500px;
-	box-shadow: 0 0 10px 0px #989898;
+	box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2), 0 0 15px -1px rgba(0, 0, 0, 0.1);
+	background-color: hsl(0, 0%, 92%);
 	margin: auto;
 	display: grid;
 	grid-template-rows: repeat(var(--grid), 1fr);
 	grid-template-columns: repeat(var(--grid), 1fr);
-	grid-gap: 5px;
-	padding: 5px;
-}
-
-#tile_array {
-	display: flex;
-	list-style: none;
-	width: 480px;
-	justify-content: space-between;
-	margin: 0 auto 1em;
-	padding: 0 10px;
+	grid-gap: 6px;
+	padding: 10px;
+	border-radius: 2px;
 }
 
 .tile {
-	background: #ccc;
+	background: hsl(0, 0%, 80%);
+	border-radius: 2px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -52,4 +48,18 @@ body {
 .tile.empty {
 	background: transparent;
 	cursor: default;
+}
+
+.stats {
+	display: flex;
+	width: 500px;
+	margin: auto;
+	justify-content: space-between;
+	font-weight: bold;
+	margin-bottom: 0.75em;
+	padding: 0 11px;
+}
+
+.stats span {
+	font-weight: normal;
 }
