--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ html {
 
 body {
 	text-align: center;
-	background-color: hsl(0, 0%, 97%);
-	color: #222222;
+	background-color: #eceff1;
+	color: #263238;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 .tile {
-	background: hsl(0, 0%, 80%);
+	background: #c7d1d6;
 	border-radius: 2px;
 	display: flex;
 	justify-content: center;
@@ -62,4 +62,32 @@ body {
 
 .stats span {
 	font-weight: normal;
+}
+
+.controls {
+	margin-bottom: 0.75em;
+}
+
+.controls > button {
+	all: unset;
+	font-size: 16px;
+	line-height: 32px;
+	text-transform: uppercase;
+	font-weight: 500;
+	height: 32px;
+	cursor: pointer;
+	padding: 0 1em;
+	min-width: 3em;
+	background: #546e7a;
+	color: white;
+	border-radius: 4px;
+	margin-right: 1em;
+	letter-spacing: 0.8px;
+	border: 2px solid #546e7a;
+	transition: all .1s ease;
+}
+
+.controls > button:hover {
+	background: transparent;
+	color: #546e7a;
 }
