--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 	background-color: #eceff1;
 	color: #263238;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 100%;
 }
 
 #puzzle {
@@ -52,7 +53,9 @@ body {
 
 .stats {
 	display: flex;
-	width: 500px;
+	width: 100%;
+	flex-wrap: wrap;
+	max-width: 500px;
 	margin: auto;
 	justify-content: space-between;
 	font-weight: bold;
@@ -90,4 +93,26 @@ body {
 .controls > button:hover {
 	background: transparent;
 	color: #546e7a;
+}
+
+@media only screen and (max-width: 550px) {
+	body {
+		font-size: 14px;
+	}
+
+	#puzzle {
+		width: 400px;
+		height: 400px;
+	}
+
+	.tile {
+		font-size: 2rem;
+	}
+} 
+
+@media only screen and (max-width: 425px) {
+	#puzzle {
+		width: 350px;
+		height: 350px;
+	}
 }
